fixes spacing between forecast days

--- a/src/styles.css
+++ b/src/styles.css
@@ -168,11 +168,12 @@ h2 {
 
 #temp-today-unit {}
 
-.next-5-days {
+#next-5-days {
   display: flex;
-  width: fit-content;
+  width: 100%;
+  justify-content: space-between;
+  text-align: center;
   margin: 0 auto;
-  gap: 100px;
   margin-bottom: 40px;
   font-size: 18px;
 }
